--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,6 @@ dependencies = [
     "email-validator>=2.0.0",
     "argon2-cffi>=23.1.0",
     "requests>=2.31.0",
+    "pytest>=7.4.0",
+    "httpx>=0.25.0",
 ]
